--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,33 @@ html,body{
 .mzmHK{
     background-image: url(../img/BKeachMZM_HK.jpg);
 }
+.mzmHL{
+    background-image: url(../img/BKeachMZM_HL.jpg);
+}
+.mzmPAC{
+    background-image: url(../img/BKeachMZM_PAC.jpg);
+}
+.mzmAL{
+    background-image: url(../img/BKeachMZM_AL.jpg);
+}
+.mzmMS{
+    background-image: url(../img/BKeachMZM_MS.jpg);
+}
+.mzmZN{
+    background-image: url(../img/BKeachMZM_ZN-09.jpg);
+}
+.mzmLC{
+    background-image: url(../img/BKeachMZM_LC.jpg);
+}
+.mzmSK{
+    background-image: url(../img/BKeachMZM_SK.jpg);
+}
+.mzmZP{
+    background-image: url(../img/BKeachMZM_ZP.jpg);
+}
+.mzmPZ{
+    background-image: url(../img/BKeachMZM_PZ.jpg);
+}
+.mzmML{
+    background-image: url(../img/BKeachMZM_ML.jpg);
+}
