--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html,body{
     height: 100%;
     font-family: 'Noto Sans TC', sans-serif;
 }
+
 #frontIndex{
     width: 100%;
     height: 100%;
@@ -30,15 +31,25 @@ html,body{
     margin: 1%;
     }
 #frontIndex main{
-    height: 40%;
+    position: absolute;
+    z-index: 10;
+    height: 50%;
+    width: 100%;
     display: block;
+    bottom: 0px;
 }
-#frontIndex main>div{
+#frontIndex main #selectMenu{
+    position: relative;
+    margin: 0 auto;
+    width: 80%;
+    display: block;
+    height: 100%;
+}
+#frontIndex main .infoBox{
     display:block;
     height: 90%;
     border: #9c7d4d 1px solid;
-    float: left
-    
+    float: left;
 }
 .infoBox {
     overflow: scroll;
@@ -115,4 +126,40 @@ html,body{
 }
 .mzmML{
     background-image: url(../img/BKeachMZM_ML.jpg);
+}
+footer{
+    background-color: rgba(0,0,0,0.5);
+    position: fixed;
+    bottom: 0px;
+    color: #FFF;
+    font-size: 0.5em;
+    height:2.5%;
+    width: 100%;
+    text-align: center;
+    vertical-align: middle;
+}
+footer a{
+    display: inline-block;
+    height: 75%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-left: 0.5%;
+    height: 30px;
+}
+#moc{
+    background-image: url(../img/footerMOC.png);
+    width: 170px;
+    
+}
+#cyc{
+    background-image: url(../img/footerCYC.png);
+    width:150px;
+}
+#tbocc{
+    background-image: url(../img/footerTBOCC.png);
+    width: 220px;
+}
+#tnnua{
+    background-image: url(../img/footerTNAU.png);
+    width:380px;
 }
