--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,11 @@ html,body{
     font-family: 'Noto Sans TC', sans-serif;
 }
 
+body{
+    background: url(../img/bkBig.jpg) bottom center no-repeat;
+    background-size: contain;
+}
+
 #frontIndex{
     width: 100%;
     height: 100%;
@@ -38,10 +43,10 @@ html,body{
     display: block;
     bottom: 0px;
 }
-#frontIndex main #selectMenu{
+#frontIndex main #selectMenu,.eachContainer{
     position: relative;
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
     display: block;
     height: 100%;
 }
@@ -132,11 +137,12 @@ footer{
     position: fixed;
     bottom: 0px;
     color: #FFF;
-    font-size: 0.5em;
-    height:2.5%;
+    font-size: 0.8em;
+    height:3%;
     width: 100%;
     text-align: center;
-    vertical-align: middle;
+    font-family: 'MyHana',serif;
+    line-height: 2;
 }
 footer a{
     display: inline-block;
@@ -144,22 +150,24 @@ footer a{
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 0.5%;
-    height: 30px;
+    height: 18px;
+    margin-top: 0.3%;
+    vertical-align: middle;
 }
 #moc{
     background-image: url(../img/footerMOC.png);
-    width: 170px;
-    
+    width: 85px;
+
 }
 #cyc{
     background-image: url(../img/footerCYC.png);
-    width:150px;
+    width:75px;
 }
 #tbocc{
     background-image: url(../img/footerTBOCC.png);
-    width: 220px;
+    width: 110px;
 }
 #tnnua{
     background-image: url(../img/footerTNAU.png);
-    width:380px;
+    width:190px;
 }
