--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,25 @@ body{
     border: #9c7d4d 1px solid;
     width: 30%;
     margin: 0 1.5%;
-    background-color: rgba(255,255,255,0.8)
+    background-color: rgba(255,255,255,0.8);
+    opacity: 0.5;
 }
+
+main .infoBox,section .infoBox{
+    animation: fadeOut 2s forwards;
+}
+
+
+main:hover .infoBox,section:hover .infoBox{
+    animation: fadeIn 2s forwards;
+}
+section{
+animation: moveBkBack 5s forwards;
+    }   
+section:hover{
+animation: moveBk 5s forwards;
+    }                            
+
 .infoBox h1{
     margin: 15px 0px ;
     text-align: center;
@@ -89,7 +106,7 @@ body{
     display: block;
     padding-top: 15%;
     background-size: cover;
-    background-position: center;
+    background-position: 40%;
     background-repeat: no-repeat;
 }
 .eachMzm:nth-child(even) .infoBox{
@@ -132,6 +149,21 @@ body{
 .mzmML{
     background-image: url(../img/BKeachMZM_ML.jpg);
 }
+
+.navBar{
+    position: fixed;
+    top: 0px;
+    color: #FFF;
+    font-size: 0.8em;
+    height:5%;
+    width: 100%;
+    text-align: center;
+    font-family: 'MyHana',serif;
+    line-height: 2; 
+    z-index: 20;
+    background-color: rgba(158,126,77,0.8);
+    opacity: 0;
+}
 footer{
     background-color: rgba(0,0,0,0.5);
     position: fixed;
@@ -170,4 +202,39 @@ footer a{
 #tnnua{
     background-image: url(../img/footerTNAU.png);
     width:190px;
+}
+
+@keyframes backgroundFadeIn {
+    from { opacity: 0;}
+    to   { opacity: 1; }
+}
+@keyframes backgroundFadeOut {
+    from { opacity: 1; }
+    to   { opacity: 0; }
+}
+
+@keyframes fadeIn {
+    from { opacity: 0.5; } 
+    to { opacity: 1; }
+}
+
+@keyframes fadeOut {
+    from { opacity: 1; } 
+    to { opacity: 0.5; }
+}
+
+@keyframes fadeInHover {
+    from { opacity: 0.9; } 
+    to { opacity: 1; }
+}
+
+
+@keyframes moveBk {
+    from { background-position: 45%; } 
+    to { background-position: 55%; }
+}
+
+@keyframes moveBkBack {
+    from { background-position: 55%; } 
+    to { background-position: 45%; }
 }
