--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,9 @@ body{
     margin: 0 1.5%;
     background-color: rgba(255,255,255,0.8);
     opacity: 0.5;
+    -webkit-box-shadow: 5px 5px 30px 0px rgba(0,0,0,0.7);
+-moz-box-shadow: 5px 5px 30px 0px rgba(0,0,0,0.7);
+box-shadow: 5px 5px 30px 0px rgba(0,0,0,0.7);
 }
 
 main .infoBox,section .infoBox{
@@ -168,40 +171,51 @@ footer{
     background-color: rgba(0,0,0,0.5);
     position: fixed;
     bottom: 0px;
-    color: #FFF;
-    font-size: 0.8em;
     height:3%;
     width: 100%;
     text-align: center;
-    font-family: 'MyHana',serif;
-    line-height: 2;
+    padding: 0.25% 0;
+    -webkit-box-shadow: 0px -1px 15px 0px rgba(0,0,0,0.7);
+-moz-box-shadow: 0px -1px 15px 0px rgba(0,0,0,0.7);
+box-shadow: 0px -1px 15px 0px rgba(0,0,0,0.7);
 }
 footer a{
     display: inline-block;
-    height: 75%;
     background-size: contain;
     background-repeat: no-repeat;
     margin-left: 0.5%;
-    height: 18px;
     margin-top: 0.3%;
     vertical-align: middle;
+}
+footer h5{
+    display: inline-block;
+    color: #FFF;
+    font-size: 0.5em;
+    font-family: 'MyHana',serif;
+    vertical-align: middle;
+    margin-left: 2%
 }
 #moc{
     background-image: url(../img/footerMOC.png);
     width: 85px;
-
+    padding-bottom:  2%;
 }
 #cyc{
     background-image: url(../img/footerCYC.png);
     width:75px;
+    padding-bottom:  2%;
+    
 }
 #tbocc{
     background-image: url(../img/footerTBOCC.png);
     width: 110px;
+    padding-bottom:  2%;
+    
 }
 #tnnua{
     background-image: url(../img/footerTNAU.png);
     width:190px;
+    padding-bottom:  2%;
 }
 
 @keyframes backgroundFadeIn {
