--- a/css/main.css
+++ b/css/main.css
@@ -3,33 +3,27 @@
     font-family: "MyHana";
     src: url("../fonts/HanaMinOTPr6N-Regular.otf") format("opentype");
 }
-
-
 html,body{
     height: 100%;
     font-family: 'Noto Sans TC', sans-serif;
 }
-
 body{
     background: url(../img/bkBig.jpg) bottom center no-repeat;
     background-size: contain;
 }
-
 #frontIndex{
     width: 100%;
     height: 100%;
     display: block;
-    
     }
-
 #navMap{
     display: block; 
     background-size: contain;
-        background: url(../img/map.svg) no-repeat center;
-            height: 60%; 
+    background: url(../img/map.svg) no-repeat center;
+    height: 60%; 
     }
 .eachButton{
-    width: 10%;
+    width: 7em;
     padding-top: 2%;
     display: block;
     text-align: center;
@@ -38,15 +32,17 @@ body{
 }
 .eachButton .btn{
     background-image: url(../img/item.svg);
-    width: 33%;
+    width: 20%;
     padding-bottom: 33%;
     display: block;
     margin: 0 auto;
     background-repeat: no-repeat;
+    background-position: bottom center;
 }
 .eachButton h4{
     display: inline;
     font-family: 'MyHana',serif;
+    line-height: 0.95;
     font-weight: 800;
     font-size: 0.5em;
     color: #9c7d4d;
@@ -58,18 +54,15 @@ body{
 -webkit-border-radius: 3px 3px 3px 3px;
 }
 .eachButton h4:first-of-type,.eachButton:hover h4:first-of-type{
-    border-bottom: none;
+/*    border-bottom: none;*/
 }
-
-
-
 .eachButton h4:last-of-type,.eachButton:hover h4:last-of-type{
     border-top: none;
 }
-.eachButton:hover .btn{
-   background-image: url(../img/loading.svg);    
+.activeDisplay .btn,.eachButton:hover .btn{
+   background-image: url(../img/itemHover.svg);    
 }
-.eachButton:hover h4{
+.activeDisplay h4,.eachButton:hover h4{
     color: #FFF;
     background-color: #9c7d4d;
     border: #FFF 1px solid;
@@ -77,7 +70,7 @@ body{
 
 .mzmHK{
   top:5%;
-  left:30%;
+  left:28%;
 }
 .mzmHL{
   top:5%;
@@ -123,7 +116,10 @@ body{
    top:10%;
   left:60%;  
 }
-
+.mzmBC{
+   top:15%;
+  left:37%;  
+}
 #frontLogo{
     background: url(../img/logoIndex.svg) left top no-repeat;
     background-size: contain;
@@ -155,6 +151,7 @@ body{
     border: #9c7d4d 1px solid;
     float: left;
 }
+
 .infoBox {
     overflow: scroll;
     border: #9c7d4d 1px solid;
@@ -182,13 +179,19 @@ animation: moveBk 5s forwards;
     }                            
 
 .infoBox h1{
+    text-decoration: none;
     margin: 15px 0px ;
     text-align: center;
     font-family: 'MyHana',serif;
     font-weight: 800;
     font-size: 2em;
-    color: #9c7d4d;
+    color: #9c7d4d; 
 }
+
+.infoBox h1 a{
+    color: #9c7d4d; 
+    text-decoration: none;
+    }
 .infoBox .subList{
     height: 70%;
     display: block;
@@ -307,10 +310,16 @@ animation: moveBk 5s forwards;
     background-color: rgba(158,126,77,0.8);
     opacity: 0;
 }
+
+
 .listBox{
+    display: block;
     clear: both;
     width: 100%;
     opacity: 0;
+}
+#adjNav,#adjNav:hover{
+    background-color: rgba(255,255,255,0.5);
 }
 .navToogle{
 position: absolute;
@@ -323,17 +332,17 @@ position: absolute;
     background-image: url(../img/upIcon.svg);
 }
 .navToogle:checked ~ .listBox {
-    animation: backgroundFadeIn 0.8s forwards;
+    animation: backgroundFadeIn 1s forwards;
 }
 
 .navToogle:unchecked ~ .listBox {
-    animation: backgroundFadeOut 0.5s forwards;
+    animation: backgroundFadeOut 1s forwards;
 }
 .listBox a{
     display: block;
     vertical-align: middle;
-    width: 8.33%;
-    padding: calc((8.3% - 2.4em)/2) 0;
+    width: 7.69230%;
+    padding: calc((7.69230% - 2.4em)/2) 0;
     float: left;
     line-height:1.2;
     color: rgba(158,126,77,1);
@@ -397,12 +406,17 @@ footer h5{
 }
 
 @keyframes backgroundFadeIn {
-    from { opacity: 0;}
-    to   { opacity: 1; }
+    from { 
+        top:-100%;
+        opacity: 0;}
+    to   { opacity: 1;
+    top:0%;}
 }
 @keyframes backgroundFadeOut {
-    from { opacity: 1; }
-    to   { opacity: 0; }
+    from { opacity: 1;
+top:0%; }
+    to   { opacity: 0;
+top:-100%; }
 }
 
 @keyframes fadeIn {
@@ -429,4 +443,26 @@ footer h5{
 @keyframes moveBkBack {
     from { background-position: 55%; } 
     to { background-position: 45%; }
+}
+
+@keyframes blinkBK {
+    0% {-webkit-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.7);
+-moz-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.7);
+box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.7);}
+    25% {-webkit-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);
+-moz-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);
+box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);}
+    50% {-webkit-box-shadow: 5px 5px 30px 0px rgba(156,125,77,1);
+-moz-box-shadow: 5px 5px 30px 0px rgba(156,125,77,1);
+box-shadow: 5px 5px 30px 0px rgba(156,125,77,1);}
+    75% {-webkit-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);
+-moz-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);
+box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.9);}
+    100% {-webkit-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.8);
+-moz-box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.7);
+box-shadow: 5px 5px 30px 0px rgba(156,125,77,0.7);}
+}
+ main #selectMenu .selectHover{
+    animation: blinkBK 1.5s infinite;
+     background-color: rgba(156,125,77,0.2) ;
 }
