--- a/css/rwd.css
+++ b/css/rwd.css
@@ -1,115 +1,120 @@
-@media (max-width: 480px){
-    footer br:last-of-type{
-        display:block;
-    }
-
-}
-@media (max-width: 767px){
-    #frontLogo{
-    display: none;
-    }    
-    .infoBox h1{
-        font-size:  1.2em;
-    }
-    .infoBox {
-    width: 90%;
-    margin: 0 auto;
-    float: none;
-    height: 20%;
-    }
-    .navCenter{
-    float: right;
-    width:10%;
-    }
-    .listBox a{
-     width: 25%;
-     padding: calc((25% - 2.4em)/2) 0;
-    }   
-
-    #adjNav{
-    width: calc(25%*3);
-    padding: calc((25%)/2) 0;
-    }
-    
-    footer{
-        height: 7%;
-    }
-    
-    #moc,#cyc,#tbocc,#tnnua{
-        padding-bottom:  3.75%;
-    }
-   footer br:first-of-type{
-        display:block;
-    }
-    footer br:last-of-type{
-        display: none;
-    }
-    .navSub{
-        display: none;
-    }
-    .selectMenu {
-        
-    }
-}
-
-@media (min-width: 768px){
-    .navSub{
+@media (max-width: 480px) {
+    footer br:last-of-type {
         display: block;
     }
-     #frontIndex main #selectMenu,.eachContainer{
+
+}
+
+@media (max-width: 767px) {
+    #frontLogo {
+        display: none;
+    }
+    .infoBox h1 {
+        font-size: 1.2em;
+    }
+    .infoBox {
+        width: 90%;
+        margin: 0 auto;
+        float: none;
+        height: 20%;
+    }
+    .navCenter {
+        float: right;
+        width: 10%;
+    }
+    .listBox a {
+        width: 25%;
+        padding: calc((25% - 2.4em)/2) 0;
+    }
+
+    #adjNav {
+        width: calc(25%*3);
+        padding: calc((25%)/2) 0;
+    }
+
+    footer {
+        height: 7%;
+    }
+
+    #moc,
+    #cyc,
+    #tbocc,
+    #tnnua {
+        padding-bottom: 3.75%;
+    }
+    footer br:first-of-type {
+        display: block;
+    }
+    footer br:last-of-type {
+        display: none;
+    }
+    .navSub {
+        display: none;
+    }
+    .selectMenu {}
+}
+
+@media (min-width: 768px) {
+    .navSub {
+        display: block;
+    }
+    #frontIndex main #selectMenu,
+    .eachContainer {
         width: 100%;
     }
-    .eachMzm:nth-child(even) .infoBox{
+    .eachMzm:nth-child(even) .infoBox {
         float: none;
     }
-    footer{
+    footer {
         height: 3%;
     }
- 
-    .listBox a{
-     width: 14.28571428%;
-     padding: calc((14.28571428% - 2.4em)/2) 0;
-    }  
-    footer br{
+
+    .listBox a {
+        width: 14.28571428%;
+        padding: calc((14.28571428% - 2.4em)/2) 0;
+    }
+    footer br {
         display: none;
     }
-    #adjNav{
-    width: calc(14.28571428%*1);
-    padding: calc((14.28571428%)/2) 0;
+    #adjNav {
+        width: calc(14.28571428%*1);
+        padding: calc((14.28571428%)/2) 0;
     }
 }
 
 
-@media (min-width: 992px ){
-    .eachMzm:nth-child(even) .infoBox{
-    float: right;
-}
-    #frontIndex main #selectMenu,.eachContainer{
+@media (min-width: 992px) {
+    .eachMzm:nth-child(even) .infoBox {
+        float: right;
+    }
+    #frontIndex main #selectMenu,
+    .eachContainer {
         width: 95%;
     }
-    .listBox a{
-     width: 11.111%;
-     padding: calc((11.111% - 2.4em)/2) 0;
+    .listBox a {
+        width: 11.111%;
+        padding: calc((11.111% - 2.4em)/2) 0;
     }
-    
-    #adjNav{
-    width: calc(11.111%*5);
-    padding: calc((11.111% )/2) 0;
-    display:block;
+
+    #adjNav {
+        width: calc(11.111%*5);
+        padding: calc((11.111%)/2) 0;
+        display: block;
     }
-    
+
 }
 
-@media (min-width: 1200px){
-   #frontIndex main #selectMenu,.eachContainer{
+@media (min-width: 1200px) {
+    #frontIndex main #selectMenu,
+    .eachContainer {
         width: 80%;
     }
-    .listBox a{    
-     width: 7.69230%;
+    .listBox a {
+        width: 7.69230%;
         padding: calc((7.69230% - 2.4em)/2) 0;
     }
-    #adjNav{
+    #adjNav {
         display: none;
     }
-    
+
 }
