--- a/css/main.css
+++ b/css/main.css
@@ -196,11 +196,62 @@ body {
     box-shadow: 5px 5px 30px 0px rgba(0, 0, 0, 0.7);
 }
 
+.mainContent {
+    width: 63%;
+    height: 80%;
+    float: right;
+    margin: 0 1.5%;
+    border: #9c7d4d 1px solid;
+    -webkit-box-shadow: 5px 5px 30px 0px rgba(0, 0, 0, 0.7);
+    -moz-box-shadow: 5px 5px 30px 0px rgba(0, 0, 0, 0.7);
+    box-shadow: 5px 5px 30px 0px rgba(0, 0, 0, 0.7);
+}
+
+
 main .infoBox,
 section .infoBox {
     animation: fadeOut 1s forwards;
 }
 
+.mainContent .contentHeader {
+    color: #FFF;
+    background-color: rgba(158, 126, 77, 0.8);
+    width: 63%;
+    height: 7.5%;
+    font-family: 'MyHana', serif;
+    clear: both;
+    position: absolute;
+}
+
+.mainContent .contentHeader h2 {
+    text-decoration: none;
+    padding: 15px 0 0 15px;
+    text-align: center;
+    font-family: 'MyHana', serif;
+    font-weight: 800;
+    font-size: 2em;
+    color: #FFF;
+    display: block;
+    hanging-punctuation: 100%;
+    float: left;
+}
+
+.mainContent .functionBox {
+    float: right;
+    padding: 15px 15px 0 0;
+}
+
+.mainContent .contentDisplay {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2)
+}
+
+.mainContent .contentDisplay iframe {
+    height: 100%;
+    width: 100%;
+}
 
 main:hover .infoBox,
 section:hover .infoBox {
@@ -251,10 +302,12 @@ section:hover {
     background-size: cover;
     background-position: 40%;
     background-repeat: no-repeat;
+    clear: both;
 }
 
 .eachMzm .infoBox {
     height: 80%;
+    float: left;
 }
 
 #mzmHK {
