--- a/css/main.css
+++ b/css/main.css
@@ -662,3 +662,7 @@ main #selectMenu .selectHover {
     animation: blinkBK 1.5s infinite;
     background-color: rgba(156, 125, 77, 0.2);
 }
+
+iframe {
+    background-color: rgba(255, 255, 255, 0.8);
+}
