--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,16 @@ section .infoBox {
 .mainContent .functionBox {
     float: right;
     padding: 15px 15px 0 0;
+    text-align: right;
+}
+
+.functionBox a {
+    color: #FFF;
+    text-decoration: none;
+}
+
+.functionBox a:hover {
+    text-decoration: underline;
 }
 
 .mainContent .contentDisplay {
